# MAGE-Engine

./: .gitignore  CMakeLists.txt  MAGE-Engine.vcxproj  MAGE-Engine.vcxproj.filters  Mage-Engine.sln  MageWindow.cpp  MageWindow.hpp  README.md  main.cpp  shaderBuild.sh  unix.sh  unixBuild.sh
example/: CMakeLists.txt
example/src/: App.cpp  App.hpp  main.cpp
scripts/: BuildShaders.bat  buildShaders.sh
shaders/: push.slang  shader.frag  shader.vert  shader.vert.spv  simpleFrag.frag.slang  simpleVert.vert.slang  simple_shader.vert  ubo.slang
src/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Chip8.cpp  Chip8.hpp  Descriptor.cpp  Descriptor.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  GameObject.hpp  ImGuiRenderSystem.hpp  KeyboardController.cpp  KeyboardController.hpp  Mage.cpp  Mage.hpp  MageEngine.cpp  MageWindow.cpp  MageWindow.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  ShaderClass.cpp  ShaderClass.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Util.cpp  Util.hpp  Window.cpp  Window.hpp  main.cpp  (+1 more)
